--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,12 +13,13 @@ requirements:
   build:
     - git  # for source/git_url above
   host:
-    - python
+    - python >=3.8
     - pip
     - hatchling >=1.12.2
     - hatch-vcs >=0.2.0
     - wheel
   run:
+    - python >=3.8
     - rich
     - click
     - conda
